--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html{
+    max-width: 500px;
+    margin: auto;
+    background-color: rgb(219, 238, 255);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .gameOver{
     white-space: pre;
+    color: blue;
 }
